# videos_re_encoder

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main_resources.qrc  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  processwidget.cpp  processwidget.hpp  processwidget.ui  timedialog.cpp  timedialog.hpp  timedialog.ui  util_macros.hpp  videoinfo.cpp  videoinfo.hpp  videoinfo_stream.cpp  videoinfo_stream.hpp  videoinfodialog.cpp  videoinfodialog.hpp  videoinfodialog.ui  videoinfowidget.cpp  videoinfowidget.hpp  videoinfowidget.ui  videos_re_encoder_ja_JP.ts  windows.rc
resources/: app_icon.kra  minus.kra  plus.kra
